# soc-forge

./: .gitignore  README.md  analyst_console.py  config.yml  pyproject.toml  sample_events.jsonl  security_events.csv  security_events.jsonl
.github/workflows/: ci.yml
samples/: hunt_test.jsonl  windows_attack_scenario.jsonl
soc_forge/: __init__.py  cli.py  config.py  models.py
soc_forge/cases/: recommended_actions.py
tests/: test_all_yaml_rules_load.py  test_attack_chain.py  test_attack_flow.py  test_attack_graph.py  test_attack_reconstruction.py  test_attack_simulator.py  test_bruteforce.py  test_case_enrichment.py  test_case_risk_scoring.py  test_config.py  test_corr_account_priv_log_clear.py  test_corr_new_user_priv_group.py  test_corr_rdp_new_admin.py  test_corr_rdp_schtask.py  test_correlation.py  test_csv_loader.py  test_evidence_fields.py  test_hunt_engine.py  test_hunt_multi_host_spread.py  test_hunt_rare_source_ip.py  test_hunt_suspicious_commands.py  test_ingest_windows_csv.py  test_mitre_coverage.py  test_mixed_simulator.py  test_new_service_installed.py  test_privilege_escalation_simulator.py  test_privilege_escalation_simulator.py.save  test_recommended_actions.py  test_rule_metadata_load.py  test_rule_validation.py  test_scheduled_task_created.py  test_socf_002_account_lockout.py  test_socf_003_new_admin.py  test_socf_004_new_service.py  test_socf_005_scheduled_task.py  test_socf_006_rdp_logon.py  test_socf_007_new_user_created.py  test_socf_008_privileged_group_change.py  test_socf_009_audit_logs_cleared.py  test_socf_010_password_spray.py  (+3 more)
(+47 files in other folders)
