[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "soc-forge"
version = "0.1.0"
description = "Mini SOC detection engine (Phase 1)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["rich>=13.0", "jinja2>=3.1", "pyyaml>=6.0"]

[project.scripts]
soc-forge = "soc_forge.cli:main"

[tool.setuptools]
packages = ["soc_forge"]
